# eatsnake

./: CMakeLists.txt  README.txt
include/: food.h  game.h  map.h  snake.h
src/: food.cc  game.cc  main.cc  map.cc  snake.cc
