cmake_minimum_required(VERSION 3.15)
project(EATSNAKE)
set(CMAKE_CXX_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src SRC)
add_executable(app ${SRC})
target_link_libraries(app PRIVATE ${CURSES_LIBRARIES})